--- a/css/global/global.css
+++ b/css/global/global.css
@@ -2,10 +2,13 @@ body {
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
   color: #111111;
-  height: 600px;
+  height: 2000px;
 }
 
 h1,
+h2,
+h3,
+h4,
 ul,
 p {
   margin: 0px;
@@ -26,3 +29,8 @@ img {
   max-width: 100%;
   display: block;
 }
+
+img[src$=".jpg"]{
+  border-radius: 4px;
+}
+
