--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,10 @@
 
 /* Home */
 @import url("./home/introducao.css");
+@import url("./home/tecnologia.css");
 
 /* Bicicletas */
 @import url("./bicicletas/bicicletas-lista.css");
+
 
 
