--- a/css/utilidades/tipografia.css
+++ b/css/utilidades/tipografia.css
@@ -29,7 +29,7 @@
 
 .font-2-l,
 .font-2-l-b {
-  font: 400 1.5rem/1.5 "Poppins", sans-serif;
+  font: 400 1.5rem/1.5 "Roboto", sans-serif;
 }
 
 .font-2-l-b {
