✨ Feat: secao de depoimento

--- a/css/home/parceiros.css
+++ b/css/home/parceiros.css
@@ -1,6 +1,6 @@
 .parceiros {
   padding-top: 60px;
-  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .parceiros h2 {
@@ -43,6 +43,9 @@
   }
   .parceiros ul {
     grid-template-columns: repeat(2, 1fr);
+  }
+  .parceiros li {
+    padding: 20px;
   }
   .parceiros li:nth-child(n + 3) {
     border-top: 2px solid var(--cor-2);
