--- a/css/seguros/seguros.css
+++ b/css/seguros/seguros.css
@@ -20,6 +20,7 @@
   padding: 32px 32px 32px 60px;
   display: grid;
   grid-template-columns: 1fr auto;
+  border-radius: 5px;
 }
 
 .seguros-item h3 {
