--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -58,3 +58,26 @@
   color: var(--cor-0);
   transition: 0.2s;
 }
+
+/* Titulos internos */
+.titulo-bg {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: var(--cor-11);
+}
+
+.titulo p {
+  margin-bottom: 4px;
+}
+
+@media (max-width: 800px) {
+  .titulo-bg {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+  .titulo > p {
+    font-size: 1rem;
+    font-weight: 900;
+    text-transform: lowercase;
+  }
+}
