✨ Feat: pagina de bicicletas

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,8 @@
 
 /* Bicicletas */
 @import url("./bicicletas/bicicletas-lista.css");
+@import url("./bicicletas/bicicletas.css");
+
 
 /* Seguros */
 @import url("./seguros/seguros.css");
