--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,8 @@
 @import url("./bicicletas/bicicletas-lista.css");
 @import url("./bicicletas/bicicletas.css");
 
+/* Bicicletas */
+@import url("./bicicleta/bicicleta.css");
 
 /* Seguros */
 @import url("./seguros/seguros.css");
