--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@
 
 /* Bicicletas */
 @import url("./bicicleta/bicicleta.css");
+@import url("./bicicleta/seguro.css");
 
 /* Seguros */
 @import url("./seguros/seguros.css");
