--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@
 
 /* Utilidades */
 @import url("./utilidades/componentes.css");
+@import url("./utilidades/formulario.css");
+
 
 /* Home */
 @import url("./home/introducao.css");
@@ -15,12 +17,11 @@
 @import url("./home/parceiros.css");
 @import url("./home/depoimento.css");
 
-
 /* Bicicletas */
 @import url("./bicicletas/bicicletas-lista.css");
 @import url("./bicicletas/bicicletas.css");
 
-/* Bicicletas */
+/* Bicicleta */
 @import url("./bicicleta/bicicleta.css");
 @import url("./bicicleta/seguro.css");
 
@@ -29,6 +30,9 @@
 @import url("./seguros/vantagens.css");
 @import url("./seguros/perguntas.css");
 
+/* Contato */
+@import url("./contato/contato.css");
+@import url("./contato/lojas.css");
 
 /* Termos */
 @import url("./termos/termos.css");
