--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,9 @@
 @import url("./contato/contato.css");
 @import url("./contato/lojas.css");
 
+/* Orçamento */
+@import url("./orcamento/orcamento.css");
+
 /* Termos */
 @import url("./termos/termos.css");
 
