--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -80,11 +80,15 @@
   transition: 0.2s;
 }
 
-/* Titulos internos */
+/* Tiítulo internas */
 .titulo-bg {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: var(--cor-11);
+}
+
+.titulo {
+  background: url("../../img/dec/otimizadas/top-right.svg") no-repeat top right 20px;
 }
 
 .titulo p {
