--- a/css/seguros/perguntas.css
+++ b/css/seguros/perguntas.css
@@ -16,15 +16,19 @@
   background-color: var(--cor-1);
 }
 
-.perguntas dt {
+.perguntas button {
   display: grid;
   grid-template-columns: auto 1fr auto;
   align-items: center;
   gap: 8px;
   cursor: pointer;
+  border: none;
+  background: none;
+  width: 100%;
+  text-align: left;
 }
 
-.perguntas dt::before {
+.perguntas button::before {
   content: "";
   display: inline-block;
   width: 12px;
@@ -32,17 +36,26 @@
   background-color: var(--cor-p1);
 }
 
-.perguntas dt::after {
+.perguntas button::after {
   content: "";
   display: inline-block;
   width: 14px;
   height: 6px;
   background: url("../../img/icones/otimizadas/seta-abrir.svg");
-  transition: .3s;
+  transition: 0.3s;
 }
 
-.perguntas dt:hover::after {
-  transform: rotate(180deg)
+.perguntas button:hover::after,
+.perguntas button[aria-expanded="true"]::after {
+  transform: rotate(180deg);
+}
+
+.perguntas dd {
+  display: none;
+}
+
+.perguntas dd.ativa {
+  display: block;
 }
 
 .perguntas dd {
@@ -53,8 +66,8 @@
 
 @media (max-width: 800px) {
   .perguntas {
-padding-top: 60px;
-padding-bottom: 60px;
+    padding-top: 60px;
+    padding-bottom: 60px;
   }
   .perguntas h2 {
     margin-bottom: 40px;
